public/css/style.css
/*---------------------------------------------*/
/*----------- layout styling -----------*/
/*---------------------------------------------*/

html,
body{
	padding: 0 !important;
	background-color:#c6bcb6;
	height: 100%;
}
.container{
	width: 100%;
}
.container-fluid {
	padding: 0 !important;
}
section {
	width: 100%;
	padding: 0 !important;
	height: 650px;
}
.alert {
	width: 100%;
}
/*---------------------------------------------*/
/*----------- partials styling -----------*/
/*---------------------------------------------*/


/*----------- navbar styling -----------*/
nav {
	width: 100%;
	height: 75px;
	margin: 0 !important;
}
.nav-link{
	font-size: 16px;
	color: rgba(255,255,255,0.9) !important;
	padding-top:26px !important;
}
.navbar{
	background-color: #96897f;
	border: 0;
}

.logo{
	height:50px;
}


/*----------- alerts styling -----------*/

.alert{
	width: 20%;
}

/*---------------------------------------------*/
/*----------- homepage styling -----------*/
/*---------------------------------------------*/

#home {
	margin: 0 !important;
	text-align: center;
	height: 650px;
}
.content {
	background: url("/img/Bison-trPark.jpg") no-repeat center;
	background-size: cover;
	margin: 50px;
	height: 100%;
}
.search-logo {
    width:150px;
    margin: 20px;
    padding: 10px ;
    border:4px solid rgba(255,255,255,0.7);
    border-radius: 600px;
}
.search-bar{
	padding: 5%;
	height: auto;

}
#search{
	height: 100%;
	margin: 20px;
}
.search-input{
	border: none;
	background-color:rgba(255, 255, 255, 0.2);
	border-radius: 15px;
	outline:none;
	font-size:36px;
	font-weight: 300;
	text-align: center;
	padding-left: 20px;
	color: rgba(255,255,255,0.9);
}
input::placeholder {
  color: rgba(255,255,255,0.7);
}
.tDesc{
	/*text-align: center;*/
}
#tDesc{
  	font-weight: 300;
  	color: white;
}
/*---------------------------------------------*/
/*----------- results page styling -----------*/
/*---------------------------------------------*/


#results-page header{
	color: rgb(4,46,100);
}
.result-content {
	padding: 20px;git 
	height: 100%;
}
.results {
	text-align: center;
	vertical-align: top;
	background-color: rgba(255,255,255,0.6);
	border: 2px solid #625750; 
	margin: 1px;
	height: 500px;
	overflow: scroll;
}
#results1 {
    height: 600px;
	overflow: scroll;
	border: 3px solid black;
}

results p{
	padding: 5px;
	height: auto;
}

.login,
.signup{
	width: 60%;
	height: 20%;
	opacity: 0.9;
	margin-top: 8%;
	border-radius: 15px;
	font-size: 36px;
	background-color:rgb(4,46,100);
}

/*---------------------------------------------*/
/*----------- login/sign up page styling -----------*/
/*---------------------------------------------*/

#signUpLogIn {
	/* margin: 0 !important; */
	height: 650px;
	padding: 10px;

}
.signupHeader{
	color: white;
	font-size: 48px;

}
.signCont{
	background-image: url("/img/bye-son.jpg");
	background-repeat: no-repeat;
	background-size: cover;
	margin: 0 !important;
	height: 100%;
}
.signupPage{
	height:auto;
  	background-color: rgba(255,255,255,0.5);
	border: 2px solid #625750; 
  	display: inline-block;
  	color: rgb(4,46,100);
  	padding: 20px;

}
.input{
  	opacity: 0.9;
}

/*---------------------------------------------*/
/*----------- profile page styling -----------*/
/*---------------------------------------------*/

.profileHeader{
	color: white;
	font-size: 48px;
	padding-left:90px;
}
.profCont{
	height: 100%;
	margin: 50px;
	
	background-image: url("/img/mt-rainier.jpg");
	background-repeat: no-repeat;
	background-size: cover;
	border: 2px solid #625750;
	overflow: scroll;
}
.profBtn{
	color: white;
	margin: 10px;
	width: 50%;
	background-color:rgb(4,46,100);
}
.delete-link{
	color: red;
	border: 3px solid red;
}
/*---------------------------------------------*/
/*----------- show page styling -----------*/
/*---------------------------------------------*/
.showHeader{
	color: white;
	font-size: 48px;
	width: 90%;
	margin:auto;
}
.showCont{
	width: 100%;
	height: 100%;
	background-image: url("/img/mt-rainier.jpg");
	background-repeat: no-repeat;
	background-size: cover;
	border: 2px solid #625750;
	border-radius: 20px;
	margin: 5px; 
	padding: 50px;
}

.showInfo{
	vertical-align:top;
	height: 90%;
	width: 30%;
	padding: 10px;
	background-color: rgba(255,255,255,0.6);
	display: inline-block;
	border: 2px solid #625750; 
	border-radius: 10px;
	margin: 10px;
	overflow: scroll;
}
.show-del{
	border: 3px solid red;
	color:white
}


/*---------------------------------------------*/
/*----------- footer styling -----------*/
/*---------------------------------------------*/

#footer {
	padding: 0 !important;
	margin: 0 !important;	
	width: 100%;
	background-color: #96897f;
	color:rgba(255,255,255,0.5) !important;
	height: 75px;
	position: absolute;
	bottom: 0;


}
.footer-text { 
	padding: 30px 0 0 0;
}

.footer-text h4{
	color:rgba(255,255,255,0.5);	

}




/* media query */
@media (max-width: 768px) {
	.navbar-ex1-collapse{
		margin-top: 73px;
		background-color: rgb(150,137,127);

	}
	.search-input {
		width: 100%;
	}
	.content {
		margin: 0px;
	}

	/* Results page */
	#results-page .row {
		margin: 0;
	}
	.results{
		display: block;
		width: 100%;
		margin: 5px 0;
		padding: 10px;

	}
	#results2{
		width: 100%;
		padding-top: 0px;
	}
	.login, .signup {
		width: 100%;
		margin-top: 1px;
		border-radius: 15px;
	}
	/* profile page */
	.profCont {
		margin: 0px;
	}
}

